--- a/.github/workflows/gitactions-demo3.yml
+++ b/.github/workflows/gitactions-demo3.yml
@@ -1,13 +1,13 @@
 name: GitActions-Demo3
 on:
   schedule:
-    - cron: '53 03 * * *'
+    - cron: '10 04 * * *'
 jobs:
   check-time:
     runs-on: ubuntu-latest
     steps:
       - name: Report current time
-        run:
+        run: |
           echo "This workflow ran on a schedule!"
           echo "Current UTC time: $(date -u)"
           echo "Current local time (on runner): $(date)"
